# Project-0

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: build.yml
cloudflare-worker/: README.md  package.json  wrangler.toml
cloudflare-worker/src/: email.ts  index.ts  license.ts  nowpayments.ts
landing/: .vercelignore  README.md  index.html  package.json  serve.mjs  styles.css  tsconfig.json  vercel.json
landing/api/: checkout.ts  health.ts  verify-license.ts  webhook.ts
landing/lib/: email.ts  kv.ts  license.ts  nowpayments.ts
scripts/: dev.bat  dev.ps1
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuraGlow.tsx  Character.tsx  CharacterScene.tsx  ChatPanel.tsx  FallbackCharacter.tsx  Logo.tsx  OnboardingModal.tsx  ParticleField.tsx  PomodoroBar.tsx  PomodoroInfoModal.tsx  SettingsModal.tsx  SpeechBubble.tsx  VRMCharacter.tsx
src/components/icons/: Icons.tsx
src/hooks/: useActiveWindow.ts  useChat.ts  usePomodoro.ts  useSettings.ts  useTTS.ts
src/hooks/__tests__/: usePomodoro.test.ts  useSettings.test.ts
src/lib/: config.ts  llm.ts  personality.ts
src/lib/__tests__/: personality.test.ts
worker/: package.json
