[package]
name = "anime-buddy"
version = "0.0.3"
description = "Lumi — Anime AI Study Buddy"
authors = ["Ernest Kostevich"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anime_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform foreground window detection (Win/macOS/Linux).
# macOS users must grant Accessibility permission once; Linux requires X11.
active-win-pos-rs = "0.9"
# NOTE: tauri-plugin-sql removed in v0.0.1 — it pulled a broken windows-future
# dependency (148 compile errors). Chat history persists via localStorage.
# Will revisit SQLite in v0.1.0 once sqlx ecosystem stabilises, or switch to
# rusqlite (no async deps).

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

